--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
@@ -318,6 +319,9 @@
                            <span class="fw-bold">Position</span> Programmer
                        </li>
                    </ul>
+               </div>
+               <div>
+
                </div>
            </div> 
         </div>
